Avoid overflow in playground

--- a/assets/application.css
+++ b/assets/application.css
@@ -12,7 +12,8 @@
   top: 0;
   right: 0;
   bottom: 50%;
-  left: 0; }
+  left: 0;
+  overflow: hidden; }
   @media (min-width: 768px) {
     .playground {
       left: 310px;
