--- a/source/stylesheets/ui/_layout.scss
+++ b/source/stylesheets/ui/_layout.scss
@@ -6,6 +6,7 @@
   right: 0;
   bottom: 50%;
   left: 0;
+  overflow: hidden;
 
   @include at-small {
     left: $code-box-width;
